[FEATURE] API reference tags; Also accept arrays of id's and s3 keys. RTE doc compacted
